<resources>
    <string name="app_name">Protrnd</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Pick up right where you left off. Oops you don’t have an account with us? Sign up here</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="post_image_result">Post Image Result</string>
    <string name="like_button">Like Button</string>
    <string name="comment_button">Comment Button</string>
    <string name="share_button">Share Button</string>
    <string name="send_text_button">Send Text Button</string>
    <string name="promote">Promote</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_banner">Add Banner</string>
    <string name="post">Post</string>
    <string name="banner_image">Banner Image</string>
    <string name="select_to_add_a_banner_for_your_promotion">Select to add a banner for your promotion</string>
    <string name="timeframe">Timeframe</string>
    <string name="daily_charge">Daily Charge</string>
    <string name="weekly_charge">Weekly Charge</string>
    <string name="monthly_charge">Monthly Charge</string>
    <string name="add_locations">Add Locations</string>
    <string name="add_location">Add Location</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="total_amount_payable_0">Total amount payable: ₦0</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="select_city">Select city</string>
    <string name="select_state">Select state</string>
    <string name="please_select_location">Please select your location for better user experience</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="select_to_add_images_or_videos">Select to add images or videos</string>
    <string name="add_caption">Add a caption…</string>
    <string name="scale_image">Scale Image</string>
    <string name="remove">Remove</string>
    <string name="tag_text">\@username</string>
    <string name="play_button">Play Button</string>
    <string name="view_more">…view more</string>
    <string name="background_image">Background Image</string>
    <string name="want_to_select_a_new_photo_to_upload">Want to select a new photo to upload?</string>
    <string name="yes">Yes</string>
    <string name="upload_images">Upload Images</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="close_button">Close</string>
    <string name="comment">Comment…</string>
    <string name="send">Send</string>
    <string name="no_comments">No Comments</string>
    <string name="scan">Scan</string>
    <string name="notification">Notification</string>
    <string name="add_post">Add Post</string>
    <string name="register">Register</string>
    <string name="user_account_ni_don_t_own_a_business">User Account\nI don’t own a business</string>
    <string name="enterprise_account_ni_own_a_business_sme_or_startup">Enterprise Account\nI own a Business, SME or Startup</string>
    <string name="continue_text">Continue</string>
    <string name="login_here">Get started with us today and start exploring. Already have an account? Login here</string>
    <string name="name">Name</string>
    <string name="at_tag">\@</string>
    <string name="username_with_at">Username (@username)</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="business_details">Business Details</string>
    <string name="business_name">Business Name</string>
    <string name="grow_business">Ready to grow your business? Let\'s start by creating an account, so you can manage your business from anywhere! \uD83D\uDE03</string>
    <string name="business_username_at">Business Username (@username)</string>
    <string name="verify_otp">Please input the one-time-password sent to your email address so we can verify your identity.</string>
    <string name="fullname">Full Name</string>
    <string name="signup">Sign Up</string>
    <string name="video_player_closer">Video player closer</string>
    <string name="support">Support</string>
    <string name="receive">Receive</string>
    <string name="send_or_receive">Want to send or receive money with ease?</string>
    <string name="feature_coming_soon">Feature coming soon......</string>
    <string name="no_likes">0 likes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="explore">Explore\nExplore lifestyles, food, and culture from all around the globe</string>
    <string name="business_text">Business\nPromote your business, trend, make and receive payments securely.</string>
    <string name="use_protrnd">How would you like to use Protrnd?</string>
    <string name="hey_there">Hey there,</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="send_reset">Send Reset</string>
    <string name="go_back">Go Back</string>
    <string name="already_have_an_account">Already have an account? Log in here</string>
    <string name="nigeria">Nigeria</string>
    <string name="country">Country</string>
    <string name="target_area_level">Target Area Level</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="enter_a_location_to_promote_to">Enter a Location to promote to</string>
    <string-array name="rivers">
        <item>Abonnema</item>
        <item>Abua</item>
        <item>Afam</item>
        <item>Ahoada</item>
        <item>Akinima</item>
        <item>Bonny</item>
        <item>Bori</item>
        <item>Buguma</item>
        <item>Degema</item>
        <item>Degema Hulk</item>
        <item>Eberi</item>
        <item>Elele</item>
        <item>Emuoha</item>
        <item>Isiokpo</item>
        <item>Kpor</item>
        <item>Nchia</item>
        <item>Ngo</item>
        <item>Obonoma</item>
        <item>Ogu</item>
        <item>Okehi</item>
        <item>Okrika</item>
        <item>Omoku</item>
        <item>Opobo</item>
        <item>Port Harcourt</item>
        <item>Rumuodomaya</item>
        <item>Saakpenwa</item>
    </string-array>
    <string name="enter_state">Enter State</string>
    <string name="enter_city">Enter City</string>
    <string name="e_g_bonny">e.g Bonny</string>
    <string name="choose_payment_plan">Choose Payment Plan</string>
    <string name="no_recurring_charge">Please note that there are no recurring charges on this payment</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="e_g_name">e.g John Basten</string>
    <string name="e_g_card_no">e.g 0000000000</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="e_g_ex_date">e.g 12/24</string>
    <string name="cvv_security_code">CVV (Security Code)</string>
    <string name="cvv">e.g 123</string>
    <string name="card_number">Card Number</string>
    <string name="promote_your_post">Promote Your Post</string>
    <string name="promote_post">Promote your post to make it trend and reach your clients</string>
    <string name="protrnd_wallet">Protrnd Wallet</string>
    <string name="support_your_favs">Support Your Favs</string>
    <string name="show_love_and_support">Show love and support your favourite people and products.</string>
    <string name="support_amount">Support Amount</string>
    <string name="support_value">100+</string>
    <string name="how_big_is_your_love">How Big is your love?</string>
    <string name="you_re_post_is_going_viral_click_here_to_find_out_what_to_do_next_or_continue_exploring">You’re post is going viral, click here to find out what to do next or continue exploring..</string>
    <string name="continue_exploring">Continue Exploring</string>
    <string name="congratulations_you_re_trnding">Congratulations you’re trnding</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="protrnd_location">Lagos, Nigeria</string>
    <string name="profile_description">Content Creator | Affiliate Marketer | I talk about design and how to make money.</string>
    <string name="protrnd">Protrnd</string>
    <string name="withdraw">Withdraw</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_all">View All</string>
    <string name="secured_by_paystack">Secured by technoville</string>
    <string name="remember_card_details">Remember Card Details</string>
    <string name="send_money">Send Money</string>
    <string name="send_amount">Send Amount</string>
    <string name="_0">0+</string>
    <string name="how_much_would_you_like_to_send">How much would you like to Send?</string>
    <string name="quick_send">Quick Send using Qr</string>
    <string name="how_would_you_like_to_send">How would you like to send?</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="protrnd_id">Protrnd ID</string>
    <string name="enter_profile_ic">Enter the receiver’s Profile ID</string>
    <string name="profile_id">Receiver’s Profile ID</string>
    <string name="at_protrnd">\@protrnd</string>
    <string name="top_up">Top Up</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="how_much_would_you_like_to_top_up">How much would you like to top up?</string>
    <string name="top_up_successful">You’ve Topped up Successfully</string>
    <string name="how_much_would_you_like_to_withdraw">How much would you like to withdraw?</string>
    <string name="select_bank_name">Select Bank Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">1234567890</string>
    <string name="account_number">Account Number</string>
    <string name="input_payment_details">Input Payment Details</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="enter_withdrawal_account_details">Enter Withdrawal Account Details</string>
    <string name="done">Done</string>
    <string name="another_happy_withdrawal">Another Happy Withdrawal</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="note_protrnd_charges_on_withdrawal">Note: Protrnd charges 5% on each withdrawal</string>
    <string name="account_name">Account Name</string>
    <string name="receive_amount_optional">Receive Amount (optional)</string>
    <string name="sending_22_600_to">Sending <b>₦22,600</b> to</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="receive_funds_quickly_with_qr_code">Receive funds quickly with Qr Code</string>
</resources>