<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.wallet.withdraw.WithdrawFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/withdraw"
        android:textColor="@color/main_pink"
        android:textSize="@dimen/heading_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/how_much_would_you_like_to_withdraw"
        android:textColor="@color/black"
        android:textSize="@dimen/subheading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/withdraw_amount"
        android:textColor="@color/main_purple"
        android:textSize="@dimen/label" />

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field_main_purp"
        android:drawableStart="@drawable/naira_ic"
        android:drawablePadding="2dp"
        android:gravity="center_vertical"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:labelFor="@+id/email_et"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/main_grey"
        android:textSize="@dimen/body"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_elevation"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/note_protrnd_charges_on_withdrawal"
        android:textColor="@color/black"
        android:textSize="@dimen/body" />

</androidx.appcompat.widget.LinearLayoutCompat>