<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/shimmer_color">
    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/post_image_result" />
    <ImageView
        android:id="@+id/remove_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/remove_ic"
        android:layout_gravity="end"
        android:visibility="gone"
        android:elevation="5dp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/remove"
        android:layout_margin="@dimen/padding_10"/>
    <ImageView
        android:id="@+id/play_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/play_ic"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:visibility="gone"
        android:alpha="0.7"
        android:contentDescription="@string/play_button"
        android:background="@drawable/round_bg"/>
</androidx.cardview.widget.CardView>