<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.wallet.send.ConfirmSendFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/confirm_transaction"
        android:textColor="@color/black"
        android:textSize="@dimen/subheading" />

    <TextView
        android:id="@+id/send_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/sending_22_600_to"
        android:textColor="@color/black"
        android:textSize="@dimen/body" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/protrnd"
            android:textColor="@color/black"
            android:textSize="@dimen/body"
            app:drawableEndCompat="@drawable/business_badge_ic"
            app:layout_constraintStart_toEndOf="@+id/profile_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:text="@string/at_protrnd"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_img"
            app:layout_constraintStart_toStartOf="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/protrnd_location"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/location_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_elevation"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.appcompat.widget.LinearLayoutCompat>